<resources>
    <string name="app_name">HalanChallenge</string>
    <string name="login">تسجيل الدخول</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="password">كلمه السر</string>
    <string name="my_products">منتجاتي</string>
    <string name="more">المزيد</string>
    <string name="back">رجوع</string>
    <string name="product_details">تفاصيل المنتج</string>
    <string name="description">الوصف</string>

    <string name="subtotal_price">Subtotal %s</string>
    <string name="total_price">Total %s</string>
    <string name="price">جنية %s</string>
    <string name="cash">كاش</string>
    <string name="new_cupcake_order">New Cupcake Order</string>
    <string name="order_details">Quantity: %1$s cupcakes \n Flavor: %2$s \nPickup date: %3$s \n
        Total: %4$s \n\n Thank you!</string>
    <plurals name="cupcakes">
    <item quantity="one">%d cupcake</item>
    <item quantity="other">%d cupcakes</item>
    </plurals>
</resources>